Crear interfaz y servicio FE para elegir fecha
- [x] Crear interfaz para elegir fecha
- [x] Crear servicio del Front End para buscar
    - 'api/exchange-rates/search/date'

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -97,7 +97,9 @@
             "edit": "Edit",
             "open": "Open",
             "save": "Save",
-            "view": "View"
+            "view": "View",
+            "search": "Search"
+
         },
         "detail": {
             "field": "Field",
