--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,6 +1,6 @@
 {
     "home": {
-        "title": "Welcome to the time machine",
+        "title": "Time machine",
         "subtitle": "A place to consult the history and the value of the Bs and Bsf",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
