Poner ultimos meses
- [x] Update jhipster
- [x] Quitar facebook login
- [x] Simplificar tabla: quitar todos menos lo usado
permitir sueldo mínimo y otras referencia,
- [x] Agregar data de sueldo minimo
- [x] Poner ultimos meses

--- a/src/main/webapp/i18n/en/exchangeRate.json
+++ b/src/main/webapp/i18n/en/exchangeRate.json
@@ -16,8 +16,10 @@
                 "title": "Exchange Rate"
             },
             "date": "Date",
-            "conversionvalue": "Conversionvalue",
-            "sueldomin": "Sueldomin"
+            "conversionvalue": "Exchange Rate Bsf",
+            "sueldomin": "Minimum Wage",
+            "sueldomindoll": "Monthly Minimum Wage $"
+
         }
     }
 }
