--- a/src/main/webapp/i18n/es/exchangeRate.json
+++ b/src/main/webapp/i18n/es/exchangeRate.json
@@ -16,7 +16,7 @@
                 "title": "Exchange Rate"
             },
             "date": "Date",
-            "conversionvalue": "Cambio BsF",
+            "conversionvalue": "Cambio por $1 en BsF",
             "sueldomin": "Sueldo Minimo Mensual",
             "sueldomindoll": "Sueldo Minimo Mensual $"
         }
