--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -14,6 +14,7 @@
             "follow": "follow @java_hipster on Twitter"
         },
         "like": "If you like JHipster, don't forget to give us a star on",
-        "github": "GitHub"
+        "github": "GitHub",
+        "tablenote": "This is a table where the value of the exchange rate is visible for the first day of the month, and the minimu wage en $"
     }
 }
